# django-next-todo-application

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  tox.ini
nginx/: default.conf
resources/: development.cfg  production.cfg
src/: tox.ini
src/task/: apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
src/task/migrations/: 0001_initial.py
src/templates/: layout.html
src/templates/dashboard/: index.html
src/templates/home/: index.html
src/tracker/: asgi.py  settings.py  urls.py  wsgi.py
src/user/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/user/management/commands/: service.py
systemd/: tracker.service  tracker.socket
tracker_api/: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
tracker_api/resources/: development.ini  production.ini
tracker_api/src/account/: filters.py  serializers.py  tests.py  urls.py  views.py
tracker_api/src/task/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
tracker_api/src/task/migrations/: 0001_initial.py
tracker_api/src/tracker/: settings.py  urls.py  views.py
tracker_webui/: .env  Dockerfile  README.md  next.config.js  package-lock.json  package.json
tracker_webui/public/: about.txt
tracker_webui/src/components/: index.tsx
tracker_webui/src/components/CreateItem/: index.tsx  types.ts
tracker_webui/src/components/ListItem/: index.tsx
tracker_webui/src/components/ListItem/Filter/: index.tsx
tracker_webui/src/components/ListItem/Paginator/: index.tsx
tracker_webui/src/components/ListItem/Table/: index.tsx
tracker_webui/src/components/Login/: index.tsx
tracker_webui/src/components/Navbar/: index.tsx
tracker_webui/src/components/lib/: index.tsx
tracker_webui/src/components/lib/CreateItem/: index.tsx
tracker_webui/src/components/lib/ListItem/: context.tsx  (+1 more)
tracker_webui/src/config/: apis.ts  browser.ts  index.ts
tracker_webui/src/constants/: apis.ts  browser.ts  index.ts
tracker_webui/src/contexts/: index.ts
tracker_webui/src/contexts/ListItemContext/: index.ts  types.ts
tracker_webui/src/hooks/: index.ts  useListItem.ts  usePaginated.ts  useUser.ts
tracker_webui/src/interfaces/: index.ts  item.ts  token.ts  user.ts
tracker_webui/src/interfaces/domain/: filter.ts  index.ts  pagination.ts
tracker_webui/src/interfaces/entities/: index.ts  item.ts  user.ts
tracker_webui/src/pages/: _app.tsx  dashboard.tsx  index.tsx
tracker_webui/src/providers/: index.tsx
tracker_webui/src/providers/ListItemProvider/: index.tsx  types.ts
tracker_webui/src/redux/: index.ts  types.ts
tracker_webui/src/redux/user/: index.ts  types.ts
tracker_webui/src/services/axios/: api.ts  index.ts  interceptors.ts  media.ts
(+6 files in other folders)
