[tool.poetry]
name = "django-todo-rest-application"
version = "0.1.0"
description = "Django Todo REST Application"
authors = ["Amogh Madan <amoghmadaan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.2.0,<3.3.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"


[tool.poetry.group.dev.dependencies]
tox = "^3.26.0"


[tool.poetry.group.production.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
extend-exclude = '''
^.*\b(migrations)\b.*$
'''


[tool.bandit]
exclude_dirs = [
    "./.eggs",
    "./.git",
    "./.tox",
    "./build",
    "./coverage",
    "./dist",
    "./venv",
    "./__pycache__",
    "*tests*",
]

